--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "extend": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
-    "rdf-ext": "https://github.com/rdf-ext/rdf-ext",
+    "rdf-ext": "git+https://github.com/rdf-ext/rdf-ext",
     "rdf-parser-rdfxml": "^0.3.0-rc1",
     "urijs": "^1.16.1",
     "xml": "^1.0.0"
