--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
       "name": "James Alastair McLaughlin",
       "email": "j.a.mclaughlin@ncl.ac.uk"
     }
-  ]
+  ],
+  "devDependencies": {
+    "cheerio": "^0.19.0",
+    "glob": "^6.0.1"
+  }
 }
