--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extend": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "rdf-ext": "git+https://github.com/rdf-ext/rdf-ext",
+    "rdf-graph-array": "git+https://github.com/udp/rdf-graph-array.git",
     "rdf-parser-rdfxml": "^0.3.0-rc1",
     "urijs": "^1.16.1",
     "xml": "^1.0.0"
