--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test/SBOL2"]
-	path = test/SBOL2
+[submodule "test/SBOLTestSuite"]
+	path = test/SBOLTestSuite
 	url = https://github.com/synbiodex/sboltestsuite
