Updated some packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sboljs",
-  "version": "2.1.12",
+  "version": "2.1.13",
   "description": "BSD-licensed implementation of the [Synthetic Biology Open Language](http://sbolstandard.org) (SBOL) in JavaScript.",
   "main": "lib/SBOLDocument.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "rdf-ext": "git://github.com/rdf-ext/rdf-ext.git#a01be12f62a55182edfffc3c81ff37befcbc85b8",
     "rdf-graph-array": "git+https://github.com/udp/rdf-graph-array.git",
     "rdf-parser-rdfxml": "^0.3.0-rc1",
-    "request": "^2.83.0",
+    "request": "https://registry.npmjs.org/request/-/request-2.83.0.tgz",
     "urijs": "https://registry.npmjs.org/urijs/-/urijs-1.18.7.tgz",
     "xml": "https://registry.npmjs.org/xml/-/xml-1.0.1.tgz",
     "xmlhttprequest": "^1.8.0"
