--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sboljs",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "BSD-licensed implementation of the [Synthetic Biology Open Language](http://sbolstandard.org) (SBOL) in JavaScript.",
   "main": "lib/SBOLDocument.js",
   "scripts": {
@@ -11,8 +11,8 @@
   "dependencies": {
     "extend": "^3.0.0",
     "json-stringify-safe": "https://registry.npmjs.org/json-stringify-safe/-/json-stringify-safe-5.0.1.tgz",
-    "rdf-ext": "git+https://github.com/rdf-ext/rdf-ext.git#a01be12f62a55182edfffc3c81ff37befcbc85b8",
-    "rdf-graph-array": "git+https://github.com/udp/rdf-graph-array.git#98b1a0c674ed2b07993d54ab7d2a3b84e661bc3e",
+    "rdf-ext-sboljs": "^0.3.0",
+    "rdf-graph-array-sboljs": "^0.3.1",
     "rdf-parser-rdfxml": "^0.3.0-rc1",
     "request": "https://registry.npmjs.org/request/-/request-2.83.0.tgz",
     "urijs": "https://registry.npmjs.org/urijs/-/urijs-1.18.7.tgz",
