docs: Update package.json to include the repository

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "cd test && bash script.sh"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SynBioDex/sboljs.git"
+  },
   "author": "James Alastair McLaughlin <j.a.mclaughlin@ncl.ac.uk>",
   "license": "BSD-2-Clause",
   "dependencies": {
