--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "sboljs",
   "version": "2.2.6",
   "description": "BSD-licensed implementation of the [Synthetic Biology Open Language](http://sbolstandard.org) (SBOL) in JavaScript.",
-  "main": "lib/SBOLDocument.js",
+  "main": "dist/main.js",
+  "files": ["dist", "README.md"],
   "scripts": {
-    "test": "cd test && bash script.sh"
+    "test": "cd test && bash script.sh",
+    "build": "webpack --mode=production"
   },
   "author": "James Alastair McLaughlin <j.a.mclaughlin@ncl.ac.uk>",
   "license": "BSD-2-Clause",
@@ -26,7 +28,12 @@
     }
   ],
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "cheerio": "^0.19.0",
-    "glob": "^6.0.1"
+    "glob": "^6.0.1",
+    "path": "^0.12.7",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
